// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomOperation transform custom operations with custom types and refs custom operation mutation has inline custom type argument 1`] = `
"input InlineCustomTypeArgInput {
  field: String
}

type Mutation {
  inlineCustomType(arg: InlineCustomTypeArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation mutation has ref to custom type argument 1`] = `
"type post 
{
  field: String
}

input postInput {
  field: String
}

type Mutation {
  refCustomType(arg: postInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation mutation with multiple references to the same custom type 1`] = `
"type post 
{
  name: String
  number: Int
}

input postInput {
  name: String
  number: Int
}

type Mutation {
  refCustomType(arg1: postInput, arg2: postInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation mutation with referenced custom type containing enum ref 1`] = `
"enum values {
  VALUE1
  VALUE2
}

type post 
{
  field: String
  enumField: values
}

input postInput {
  field: String
  enumField: values
}

type Mutation {
  refCustomType(arg: postInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation query has inline custom type argument 1`] = `
"input InlineCustomTypeArgInput {
  field: String
}

type Query {
  inlineCustomType(arg: InlineCustomTypeArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation query has ref to custom type argument 1`] = `
"type post 
{
  field: String
}

input postInput {
  field: String
}

type Query {
  refCustomType(arg: postInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation query with enum in inline custom type argument 1`] = `
"enum InlineCustomTypeArgStatus {
  ACTIVE
  INACTIVE
}

input InlineCustomTypeArgInput {
  name: String
  status: InlineCustomTypeArgStatus
}

type Query {
  inlineCustomType(arg: InlineCustomTypeArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation query with enum in referenced custom type argument 1`] = `
"type post 
{
  name: String
  status: PostStatus
}

enum PostStatus {
  NEW
  IN_PROGRESS
  COMPLETED
}

input postInput {
  name: String
  status: PostStatus
}

type Query {
  refCustomType(arg: postInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation query with inline enum 1`] = `
"enum CustomOperationArg {
  PENDING
  APPROVED
  REJECTED
}

type Query {
  customOperation(arg: CustomOperationArg): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation query with ref to enum 1`] = `
"enum options {
  OPTION1
  OPTION2
}

type Query {
  post(arg: options): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation query with ref to nested custom type argument 1`] = `
"type post 
{
  inner: PostInner
}

type PostInner 
{
  filter: String!
  e1: PostInnerE1
}

enum PostInnerE1 {
  a
  b
  c
}

input PostInnerInput {
  filter: String!
  e1: PostInnerE1
}

input postInput {
  inner: PostInnerInput
}

type Query {
  fcnCall(arg: postInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation subscription has inline custom type argument 1`] = `
"input InlineCustomTypeSubArgInput {
  field: String
}

type Mutation {
  mutationCustomOps(arg: String): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  inlineCustomTypeSub(arg: InlineCustomTypeSubArgInput): String @function(name: "myFunc") @aws_subscribe(mutations: ["mutationCustomOps"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation subscription has ref to a custom type argument 1`] = `
"type post 
{
  title: String
}

input postInput {
  title: String
}

type Mutation {
  mutationCustomOps(arg: String): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  refCustomTypeSub(arg: postInput): String @function(name: "myFunc") @aws_subscribe(mutations: ["mutationCustomOps"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation subscription referencing an enum 1`] = `
"enum statusEnum {
  OPEN
  CLOSED
}

type Mutation {
  mutationCustomOps(arg: String): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  enumRefSub(arg: statusEnum): String @function(name: "myFunc") @aws_subscribe(mutations: ["mutationCustomOps"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation subscription with multiple references to the same custom type 1`] = `
"type post 
{
  name: String
}

input postInput {
  name: String
}

type Mutation {
  mutationCustomOps(arg: String): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  multiRefSub(arg1: postInput, arg2: postInput): String @function(name: "myFunc") @aws_subscribe(mutations: ["mutationCustomOps"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation subscription with nested custom type argument 1`] = `
"type nestedType 
{
  post: NestedTypePost
}

type NestedTypePost 
{
  inner: String
}

input NestedTypePostInput {
  inner: String
}

input nestedTypeInput {
  post: NestedTypePostInput
}

type Mutation {
  mutationCustomOps(arg: String): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  nestedSub(arg: nestedTypeInput): String @function(name: "myFunc") @aws_subscribe(mutations: ["mutationCustomOps"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation with circular references between custom types 1`] = `
"type post 
{
  value: String
  child: update
}

type update 
{
  title: String
  field: post
}

input updateInput {
  title: String
  field: postInput
}

input postInput {
  value: String
  child: updateInput
}

input InlineCustomTypeArgInput {
  inner: postInput
}

type Mutation {
  inlineCustomType(arg: InlineCustomTypeArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation with inline custom type containing reference to another custom type 1`] = `
"type post 
{
  name: String
}

input postInput {
  name: String
}

input FnCallArgInput {
  name: String
  status: postInput
}

type Mutation {
  fnCall(arg: FnCallArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation with inline custom type referencing self-referential type 1`] = `
"type post 
{
  value: String
  child: post
}

input postInput {
  value: String
  child: postInput
}

input InlineCustomTypeArgInput {
  inner: postInput
}

type Mutation {
  inlineCustomType(arg: InlineCustomTypeArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs custom operation with ref to custom type with self-referencing field 1`] = `
"type post 
{
  value: String
  child: post
}

input postInput {
  value: String
  child: postInput
}

type Mutation {
  inlineCustomType(arg: postInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs multiple custom operations referencing the same custom type 1`] = `
"type post 
{
  name: String
  number: Int
}

input postInput {
  name: String
  number: Int
}

type Mutation {
  fnCall1(arg: postInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
  fnCall2(arg: postInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Custom Mutation w required arg and enum 1`] = `
"type Post @model @auth(rules: [{allow: private}])
{
  title: String
}

enum LikePostReactionType {
  :shipit:
  :risitas:
}

type Mutation {
  likePost(postId: String!, reactionType: LikePostReactionType): Post 
}"
`;

exports[`CustomOperation transform dynamo schema Custom Mutation w string function reference & auth 1`] = `
"type Post @model @auth(rules: [{allow: private}])
{
  title: String
}

type Mutation {
  likePost(postId: String!): Post @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema Custom Mutation w string function reference 1`] = `
"type Post @model @auth(rules: [{allow: private}])
{
  title: String
}

type Mutation {
  likePost(postId: String!): Post @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline boolean return type 1`] = `
"type Mutation {
  likePost(postId: String!): Boolean 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline custom return type 1`] = `
"type LikePostReturnType 
{
  stringField: String
  intField: Int
  floatField: Float
  boolField: Boolean
  datetimeField: AWSDateTime
  jsonField: AWSJSON
}

type Mutation {
  likePost(postId: String!): LikePostReturnType 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline datetime return type 1`] = `
"type Mutation {
  likePost(postId: String!): AWSDateTime 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline float return type 1`] = `
"type Mutation {
  likePost(postId: String!): Float 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline integer return type 1`] = `
"type Mutation {
  likePost(postId: String!): Int 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline json return type 1`] = `
"type Mutation {
  likePost(postId: String!): AWSJSON 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline string return type 1`] = `
"type Mutation {
  likePost(postId: String!): String 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline boolean return type 1`] = `
"type Query {
  getPostDetails(postId: String!): Boolean 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline custom enum return type 1`] = `
"enum GetPostStatusReturnType {
  draft
  pending
  approved
}

type Query {
  getPostStatus(postId: String!): GetPostStatusReturnType 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline custom return type 1`] = `
"type GetPostDetailsReturnType 
{
  stringField: String
  intField: Int
  floatField: Float
  boolField: Boolean
  datetimeField: AWSDateTime
  jsonField: AWSJSON
}

type Query {
  getPostDetails(postId: String!): GetPostDetailsReturnType 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline datetime return type 1`] = `
"type Query {
  getPostDetails(postId: String!): AWSDateTime 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline float return type 1`] = `
"type Query {
  getPostDetails(postId: String!): Float 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline integer return type 1`] = `
"type Query {
  getPostDetails(postId: String!): Int 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline json return type 1`] = `
"type Query {
  getPostDetails(postId: String!): AWSJSON 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline string return type 1`] = `
"type Query {
  getPostDetails(postId: String!): String 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w referenced enum return type 1`] = `
"enum PostStatus {
  draft
  pending
  approved
}

type Query {
  getPostStatus(postId: String!): PostStatus 
}"
`;

exports[`CustomOperation transform dynamo schema Generation route does not require a handler even when auth is defined 1`] = `
"type Recipe @aws_api_key
{
  ingredients: [String]
}

type Query {
  makeRecipe(content: String): Recipe @generation(aiModel: "anthropic.claude-3-haiku-20240307-v1:0", systemPrompt: "Hello, world!") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Generation route should create directive with inference configuration 1`] = `
"type Recipe @aws_api_key
{
  ingredients: [String]
}

type Query {
  makeRecipe(content: String): Recipe @generation(aiModel: "anthropic.claude-3-haiku-20240307-v1:0", systemPrompt: "Hello, world!", inferenceConfiguration: { temperature: 0.5, maxTokens: 100, topP: 1 }) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Generation route with empty inference configuration should not pass argument along to directive 1`] = `
"type Query {
  makeRecipe(content: String): String @generation(aiModel: "anthropic.claude-3-haiku-20240307-v1:0", systemPrompt: "Hello, world!") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Generation route with subset of inference configuration should create directive arg 1`] = `
"type Query {
  makeRecipe(content: String): String @generation(aiModel: "anthropic.claude-3-haiku-20240307-v1:0", systemPrompt: "Hello, world!", inferenceConfiguration: { temperature: 0.5 }) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Schema w model, custom query, mutation, and subscription 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Query {
  getLikedPost: Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Schema w model, custom query, mutation, and subscription and ref of custom type with array modifier 1`] = `
"type PostCustomType @aws_api_key
{
  title: String
}

type Mutation {
  listPosts: [PostCustomType] @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Query {
  getLikedPost: [PostCustomType] @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onCreatePost: [PostCustomType] @function(name: "myFunc") @aws_subscribe(mutations: ["listPosts"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Schema w model, custom query, mutation, and subscription and ref of model with array modifier 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  listPosts: [Post] @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Query {
  getLikedPost: [Post] @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onCreatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription where .for() resource has a CustomType return type 1`] = `
"type CreateCustomTypePostReturnType @aws_api_key
{
  title: String!
}

type Mutation {
  createCustomTypePost: CreateCustomTypePostReturnType @function(name: "createCustomTypePost") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikeCustomTypePost: CreateCustomTypePostReturnType @function(name: "onCreateCustomTypePost") @aws_subscribe(mutations: ["createCustomTypePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription where .for() resource has a scalar return type 1`] = `
"type Mutation {
  likePost: String @function(name: "likePost") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikePost: String @function(name: "onLikePost") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with Model source & custom mutation source 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "likePost") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikeOrUpdatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost", "updatePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with custom mutation source 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "likePost") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with model multiple mutation sources 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Subscription {
  onAnyPostMutation: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost", "updatePost", "deletePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with model single mutation source 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Subscription {
  onCreatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.custom a.handler.custom with auth and model ref works 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type GetPostDetailsReturnType @aws_api_key
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @aws_api_key
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.custom a.handler.custom with auth works 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools(cognito_groups: ["groupA", "groupB"])
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @aws_cognito_user_pools(cognito_groups: ["groupA", "groupB"])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.custom a.handler.custom with multiple supported auth modes 1`] = `
"type Post @model @auth(rules: [{allow: private}])
{
  title: String
}

type Query {
  customQuery: String @aws_cognito_user_pools @aws_cognito_user_pools(cognito_groups: ["groupA", "groupB"])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "FnGetPostDetails") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction async - async 1`] = `
"type EventInvocationResponse @aws_cognito_user_pools
{
  success: Boolean!
}

type Query {
  getPostDetails: EventInvocationResponse @function(name: "FnGetPostDetails", invocationType: Event) @function(name: "FnGetPostDetails2", invocationType: Event) @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction async - sync 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "FnGetPostDetails", invocationType: Event) @function(name: "FnGetPostDetails2") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction event invocation 1`] = `
"type EventInvocationResponse @aws_cognito_user_pools
{
  success: Boolean!
}

type Query {
  getPostDetails: EventInvocationResponse @function(name: "FnGetPostDetails", invocationType: Event) @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction for an operation with async that is authorization by both group and authorized 1`] = `
"type EventInvocationResponse @aws_cognito_user_pools @aws_cognito_user_pools(cognito_groups: ["TestGroup"])
{
  success: Boolean!
}

type Query {
  getPostDetails: EventInvocationResponse @function(name: "FnGetPostDetails", invocationType: Event) @auth(rules: [{allow: private},
  {allow: groups, groups: ["TestGroup"]}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction for two async operations with async where one is authorization is both group and authorized 1`] = `
"type EventInvocationResponse @aws_cognito_user_pools @aws_cognito_user_pools(cognito_groups: ["TestGroup"])
{
  success: Boolean!
}

type Query {
  getPostDetailsA: EventInvocationResponse @function(name: "FnGetPostDetailsA", invocationType: Event) @auth(rules: [{allow: groups, groups: ["TestGroup"]}])
  getPostDetailsB: EventInvocationResponse @function(name: "FnGetPostDetailsB", invocationType: Event) @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction sync - async 1`] = `
"type EventInvocationResponse @aws_cognito_user_pools
{
  success: Boolean!
}

type Query {
  getPostDetails: EventInvocationResponse @function(name: "FnGetPostDetails") @function(name: "FnGetPostDetails2", invocationType: Event) @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function pipeline / mix 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "myFunc") @function(name: "FnGetPostDetails2") @function(name: "FnGetPostDetails3") @function(name: "myFunc2") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function string 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.inlineSql escapes quotes 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @sql(statement: "SELECT * from TESTTABLE status = \\"active\\";") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.inlineSql works 1`] = `
{
  "customSqlDataSourceStrategies": [
    {
      "fieldName": "getPostDetails",
      "typeName": "Query",
    },
  ],
  "functionSchemaAccess": [],
  "functionSlots": [],
  "jsFunctions": [],
  "lambdaFunctions": {},
  "schema": "type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @sql(statement: "SELECT * from TESTTABLE;") @auth(rules: [{allow: private}])
}",
}
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.sqlReference works 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @sql(reference: "./testQueryName") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform sql schema Schema w model, custom query, mutation, and subscription 1`] = `
"type Post @model(timestamps: null) @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Query {
  getLikedPost: Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform sql schema schema.add* will not accept custom operations of incompatible types 1`] = `
"type Post @model(timestamps: null) @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Query {
  getLikedPost: Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onCreatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost"]) @auth(rules: [{allow: public, provider: apiKey}])
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["updatePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`custom operations + custom type auth inheritance implicit custom type inherits auth rules from referencing op 1`] = `
"type MyQueryReturnType @aws_api_key
{
  fieldA: String
  fieldB: Int
}

type Query {
  myQuery: MyQueryReturnType @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`custom operations + custom type auth inheritance nested custom types inherit auth rules from top-level referencing op 1`] = `
"type MyQueryReturnType @aws_api_key
{
  fieldA: String
  fieldB: Int
  nestedCustomType: MyQueryReturnTypeNestedCustomType
}

type MyQueryReturnTypeNestedCustomType @aws_api_key
{
  nestedA: String
  nestedB: String
  grandChild: MyQueryReturnTypeNestedCustomTypeGrandChild
}

type MyQueryReturnTypeNestedCustomTypeGrandChild @aws_api_key
{
  grandA: String
  grandB: String
}

type Query {
  myQuery: MyQueryReturnType @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`custom operations + custom type auth inheritance op returns top-level custom type with 1 auth mode 1`] = `
"type QueryReturn @aws_api_key
{
  fieldA: String
  fieldB: Int
}

type Query {
  myQuery: QueryReturn @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`custom operations + custom type auth inheritance op returns top-level custom type with all supported auth modes 1`] = `
"type QueryReturn @aws_api_key @aws_cognito_user_pools @aws_iam @aws_cognito_user_pools(cognito_groups: ["admin", "superAdmin"])
{
  fieldA: String
  fieldB: Int
}

type Query {
  myQuery: QueryReturn @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey},
  {allow: private},
  {allow: groups, groups: ["admin", "superAdmin"]},
  {allow: public, provider: iam},
  {allow: private, provider: iam}])
}"
`;

exports[`custom operations + custom type auth inheritance top-level custom type inherits combined auth rules from referencing ops 1`] = `
"type QueryReturn @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
}

type Query {
  myQuery: QueryReturn @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
  myMutation: QueryReturn @function(name: "myFn") @auth(rules: [{allow: private}])
}"
`;

exports[`custom operations + custom type auth inheritance top-level custom type with nested implicit and explicit custom types inherits combined auth rules from referencing ops 1`] = `
"type QueryReturn @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
  nested: QueryReturnNested
}

type LevelTwo @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
}

type QueryReturnNested @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
  nested: LevelTwo
}

type Query {
  myQuery: QueryReturn @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
  myMutation: QueryReturn @function(name: "myFn") @auth(rules: [{allow: private}])
}"
`;

exports[`custom operations + custom type auth inheritance top-level custom type with nested top-level custom types inherits combined auth rules from referencing ops 1`] = `
"type QueryReturn @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
  nested: LevelOne
}

type LevelOne @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
  nested: LevelTwo
}

type LevelTwo @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
}

type Query {
  myQuery: QueryReturn @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
  myMutation: QueryReturn @function(name: "myFn") @auth(rules: [{allow: private}])
}"
`;
